[project]
name = "langgraph-course"
version = "0.1.0"
description = ""
authors = [
    {name = "Dani Szwarc",email = "dani@thiez.com"}
]
requires-python = ">=3.13,<4.0"
dependencies = [
    "langchain-tavily (>=0.2.17,<0.3.0)",
    "uv (>=0.9.26,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
